# loom

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  Loom 项目 Agent 安全沙盒设计方案 f508779a2b76416ea447757e75cfe1f9.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  _load.txt  eslint.config.js  index.html  package-lock.json  package.json  terminal-tool-result-demo.html  tool-timeline-demo.html  ui-style-lab.html  vite.config.ts
.github/workflows/: ci.yml  release-windows.yml
docs/releases/: windows-auto-update.md
scripts/: check-release-version.mjs  dead-file-check.cjs  fetch-cbm-sidecar.mjs
src/: App.module.css  App.tsx  main.tsx  monaco-languages.ts  monaco-loader.test.ts  monaco-loader.ts  search-navigation.test.tsx
src-tauri/: Cargo.toml  build.rs  tactical-telemetry.html  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_store.rs  audit_log.rs  automation.rs  browser.rs  config_paths.rs  conversation.rs  file_ops.rs  git_workspace.rs  lib.rs  main.rs  port_manager.rs  sandbox.rs  sandbox_os.rs  terminal.rs  tool_executor.rs
src-tauri/src/app/: commands.rs  mod.rs  setup.rs
src-tauri/src/cbm/: config.rs  estimate.rs  state.rs  ui.rs
src-tauri/src/chat/: message_builder.rs  mod.rs  retry.rs  stream.rs  test_connection.rs
src-tauri/src/core/: debug_log.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/agent/: agent_store.rs  conversation.rs  mod.rs
src-tauri/src/domain/ai/: mod.rs
src-tauri/src/domain/ai/chat/: builtin_gateway.rs  config.rs  gateway_sign.rs  list_models.rs  message_builder.rs  mod.rs  send.rs  stream.rs  test_connection.rs  types.rs  web_fetch.rs  web_search.rs
src-tauri/src/domain/ai/image_gen/: mod.rs
src-tauri/src/domain/integration/: cdp_browser.rs  checkpoint.rs  git_diff.rs  git_worktree.rs  mcp.rs  mod.rs
src-tauri/src/domain/integration/cbm/: cli.rs  commands.rs  list_enrich.rs  mod.rs  path.rs  project_path.rs  registry.rs  storage.rs  types.rs  version.rs
src-tauri/src/domain/system/: editor_settings.rs  file_ops.rs  file_watcher.rs  live_server.rs  mod.rs  port_manager.rs  symbol_definition.rs  tool_executor.rs  usage_tracking.rs
src-tauri/src/security/: audit_log.rs  context.rs  mod.rs  sandbox.rs  sandbox_os.rs
src/components/: ActivityBar.module.css  ActivityBar.test.tsx  ActivityBar.tsx  AgentApp.module.css  AgentApp.test.tsx  AgentApp.tsx  (+47 more)
(+638 files in other folders)
