[package]
name = "loom"
version = "0.1.1"
description = "AI-native desktop code editor and local development workbench built with Tauri 2, React and Rust."
authors = ["Lennoxsudo"]
license = "Apache-2.0"
repository = "https://github.com/Lennoxsudo/loom"
edition = "2021"
default-run = "loom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` is intentionally omitted so release builds do not ship devtools.
# Devtools remain available automatically in debug builds.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
url = "2"
eventsource-stream = "0.2"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
trash = "3.0"
portable-pty = "0.8"
regex = "1"
html2md = "0.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
sha2 = "0.10"
encoding_rs = "0.8"
once_cell = "1"
log = "0.4"
croner = "2"

# live server
axum = "0.7"
futures-util = "0.3"
notify = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time", "fs", "process"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# P1 sandbox: Windows Job Object for process lifecycle isolation
# NOTE: Does NOT include filesystem/network isolation (write-restricted token is a future enhancement)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

# P2 sandbox: Linux Landlock for kernel-level filesystem isolation
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
